--- a/1. Basic - GUI with Tkinter/4. Grid Layout/1. Introduction to grid layout/task-info.yaml
+++ b/1. Basic - GUI with Tkinter/4. Grid Layout/1. Introduction to grid layout/task-info.yaml
@@ -14,6 +14,11 @@ files:
   visible: false
   encrypted_text: BPrPxsoPO0ddRfXxWyDgbA==
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Mon, 12 Dec 2022 09:47:17 UTC"
 record: -1
+selected_options:
+- 0
 local_check: true
