--- a/1. Basic - GUI with Tkinter/4. Grid Layout/3. Column spans and padded grid layouts/task-info.yaml
+++ b/1. Basic - GUI with Tkinter/4. Grid Layout/3. Column spans and padded grid layouts/task-info.yaml
@@ -37,5 +37,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: "Mon, 12 Dec 2022 09:52:11 UTC"
 record: -1
 post_submission_on_open: true
